2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/AddAlbumWindow.cs:
	* src/CoverImage.cs:

	Dragging albums now also supports the uri-list dnd type.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:

	Don't compile unused InfoWindow.cs and NoMusicFoundWindow.cs for now.

2004-12-30  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/CoverDatabase.cs:
	* src/FileSelector.cs:
	* src/GnomeProxy.cs:
	* src/InfoWindow.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:
			
	Made GConf keys and default values constants.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/FileSelector.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/PluginManager.cs:
	* src/SongDatabase.cs:

	Filenames are now properties of the Muine class. Based on a patch by
	Tamara Roberson.

2004-12-30  Tamara Roberson  <foxxygirltamara@gmail.com>
            Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/FileSelector.cs:
	* src/FileUtils.cs:
	* src/NoMusicFoundWindow.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Minor code cleanup.
	
	* src/GnomeProxy.cs:

	Minor code cleanup -- return early rather than having big 
	if-statements.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Reset horizontal scrollbar when opening window and searching.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlayerDBusObject.cs:

	Don't crash if D-Bus support could not be initialized.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/PlayerInterface.cs:
	* PluginLib/Plugin.cs:
	* PluginLib/SongInterface.cs:
	* plugins/DashboardPlugin.cs:
	* src/PlayerDBusObject.cs:
	* src/PlaylistWindow.cs:
	* src/PluginManager.cs:
	* src/Song.cs:

	Own namespace for PluginLib.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>
